<resources>
    <string name="app_name">TaxisBY</string>
    <string name="name_rus_app">Маршрутки Минска </string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="searchOnDb">Прямой маршрутки по заданному пути нет</string>

    <!--FirstStartMain -->
    <string name="textFirstStart">Пожалуйста подождите..</string>

    <!-- SearchDirect First View -->
    <string name="viewTextSearchDirect">Поиск осуществляется по одному маршруту (Без пересадок ) </string>

    <!--SearchDirect -->
    <string name="beginPoint">Начальная остановка</string>
    <string name="EndPoint">Конечная остановка</string>

    <!--Toolbar-->
    <string name="searchGo">Остановка или номер маршрутки</string>
    <string name="searchUbdate">Проверить расписание</string>


    <!-- infoActivity-->
    <string name="interval">Интервал ( или расписание )</string>
    <string name="working">Время работы</string>
    <string name="inWeek">Дни</string>


    <!-- Пункты меню-->
    <string name="menu_additionally">Дополнительные функции</string>
    <string name="сommunicate">Контакты</string>

    <string name="googleMaps">Карта</string>
    <string name="searchDirect">Поиск маршрута</string>
    <string name="listTaxis">Полный список</string>
    <string name="about">О приложении</string>

    <!--Обвноление -->
    <string name="ubdateHeader">Проверка расписания </string>

    <string name="ubdateInfoTrue">Найдены обновления. Обновить? </string>

    <string name="ubdateInfoFalse"> Обновлений нет </string>


    <!-- About Activity-->
    <string name="aboutHeader">О приложении</string>

    <string name="textAbout1">
        Приложение разоработанно в информациионных целях.
        Разработчик не несет ответственности за точность данных.
        Все данные взяты из свободного доступа.
        
    </string>
    <string name="link"> <u>Политика конфиденциальности</u></string>

    <string name="textAbout2">
         Свои пожелания и предложения отправлять по адрессу G.K.Reduction@gmail.com
    </string>
    <string name="title_activity_maps">Map</string>
</resources>
