<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.transport.taxi.bus.taxis.main.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/side_nav_bar"
            android:gravity="center"
            app:title="@string/name_rus_app"
            app:titleTextColor="@color/White" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/White"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/firstHalt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_direction_halt"
                android:gravity="center"
                android:hint="@string/beginPoint"
                android:textColor="@color/Black"
                android:textColorHint="@color/Grey"
                android:textSize="20sp" />

            <AutoCompleteTextView
                android:id="@+id/secondHalt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_direction_halt"
                android:gravity="center"
                android:hint="@string/EndPoint"
                android:textColor="@color/Black"
                android:textColorHint="@color/Grey"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonSearchDirect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/Grey"
                android:gravity="center"
                android:text="@string/searchDirect"
                android:textColor="@color/Yellow" />
        </LinearLayout>

    </android.support.design.widget.AppBarLayout>


    <include layout="@layout/content_search_direct" />

</android.support.design.widget.CoordinatorLayout>
